# K-daejeop

./: .cursorrules  .env.development.example  .env.production.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: keep-alive.yml
app/: main.py
app/core/: auth.py  config.py
app/routers/: auth.py  health.py  pages.py  places.py
app/services/: kakao.py
app/static/: ads.js  auth.js  i18n.js  main.js  myreviews.js  reviewCache.js  reviews.js  styles.css  tutorial.js
app/templates/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: ads.txt  manifest.json
frontend/src/: App.tsx  env.ts  index.css  keepAlive.ts  main.tsx
frontend/src/components/: AppLayout.tsx  ChangelogModal.tsx  LandingContent.tsx  LanguageSelector.tsx  LoginModal.tsx  LoginPromptModal.tsx  Toast.tsx
frontend/src/data/: demoReviews.ts
frontend/src/hooks/: useAuth.ts  useBoardPins.ts  useGeolocation.ts  useReviewedPlaces.ts
frontend/src/i18n/: index.ts
frontend/src/services/: api.ts  (+2 more)
frontend/tests/: keepAlive.test.ts  setup.ts
scripts/: serve.sh
supabase/migrations/: 001_reviews_and_profiles.sql  002_user_tier.sql  003_verified_visit.sql  004_rating_allow_zero.sql  005_badge_boards.sql  006_board_creator_reviews.sql  007_saved_boards.sql  008_publish_limit.sql  009_cosmetics.sql
tests/: conftest.py  test_app.py  test_auth.py  test_config.py  test_health.py  test_health_filter.py  test_i18n_ui.py  test_myreviews_ui.py  test_pages.py  test_places.py  test_reviews_ui.py  test_supabase_connection.py
(+71 files in other folders)
