[project]
name = "k-daejeop"
version = "0.1.0"
description = "Korea map prototype using Kakao Map API"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "httpx==0.27.0",
  "jinja2==3.1.4",
  "pydantic==1.10.15",
  "PyJWT[crypto]==2.8.0",
]

[dependency-groups]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
